--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   telephony: ^0.2.0
   sim_service: ^0.1.0
   device_info_plus: ^8.1.0
+  sms_maintained: ^0.2.5
 
 dev_dependencies:
   flutter_test:
