--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.2 <3.0.0'
+  sdk: '>=2.19.3 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,20 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  permission_handler:
+  sim_data: ^0.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  android_alarm_manager_plus: ^2.1.1
-  permission_handler: ^10.2.0
-  mobile_number: ^2.1.1
-  share: ^2.0.4
-  flutter_sms: ^2.3.3
-  telephony: ^0.2.0
-  sim_service: ^0.1.0
-  device_info_plus: ^8.1.0
-  sms_maintained: ^0.2.5
 
 dev_dependencies:
   flutter_test:
@@ -97,3 +90,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
